--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,16 +1,20 @@
 html,
 body,
 #app {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .el-breadcrumb {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .el-table {
-    margin-top: 15px;
-    margin-bottom: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.ql-editor {
+  min-height: 200px;
 }
